# CalculatorV1

./: CMakeLists.txt  linearFunction.h  main.cpp
header/: linearFunction.h  linear_system_of_equation.h  linkToWelcome.h  normalCalculator.h  quadratic_functions.h  tester.h  theorem_of_pythagoras.h  welcome.h
